// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The NavBar component should render logged in version without crashing 1`] = `
<DocumentFragment>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <a
            aria-current="page"
            class="makeStyles-navLink-221 active"
            href="/"
          >
            <h3
              class="MuiTypography-root makeStyles-navLinkText-222 MuiTypography-h3"
            >
              Docufy
            </h3>
          </a>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
              href="/dashboard/"
              id="dashboard"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label"
              >
                Dashboard
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
              id="logout"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Log Out
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`The NavBar component should render logged out version without crashing 1`] = `
<DocumentFragment>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary MuiPaper-elevation4"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-space-between"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <a
            aria-current="page"
            class="makeStyles-navLink-1 active"
            href="/"
          >
            <h3
              class="MuiTypography-root makeStyles-navLinkText-2 MuiTypography-h3"
            >
              Docufy
            </h3>
          </a>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-colorInherit"
              href="/login"
              id="login"
              role="button"
              tabindex="0"
            >
              <span
                class="MuiButton-label"
              >
                Log In
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
